--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
         height:100vh;
     }
     #page1 h1{
-        font-size:30px;
+        font-size:27px;
     }
     .front{
         color:darkblue;
@@ -87,7 +87,7 @@
     #read,#contact{
         text-decoration:none;
         font-size:13px;
-        font-weight:bold;
+        font-weight:550;
         width:100px;
         height:30px;
         border-radius:10px;
@@ -138,7 +138,7 @@
         display:flex;
         flex-direction:row;
         flex-wrap:wrap;
-        justify-content:start;
+        justify-content:center;
     }
     #first,#second{
         width:300px;
